fix weird spacing

--- a/src/components/Nav/index.module.scss
+++ b/src/components/Nav/index.module.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
 
     .navOption {
+      display: flex;
       width: 100%;
       aspect-ratio: 1 / 1;
       padding: 0;
